--- a/Guess gameII/css/style.css
+++ b/Guess gameII/css/style.css
@@ -4,6 +4,11 @@
     margin: 0 auto;
 }
 
+h1{
+    margin: 50px auto;
+    text-align: center;
+}
+
 .card{
     border: 3px #aaa solid;
     width: 100px;
@@ -15,4 +20,8 @@
     padding-top: 30px;
     font-size: 200%;
     font-weight: bold;
+}
+
+#errorMsg{
+    color: red;
 }
